<resources>
    <string name="app_name" translatable="false">MikuBox</string>
    <string name="app_name_long" translatable="false">MikuBox for Android</string>
    <string name="app_desc">The universal proxy toolchain for Android, written in Kotlin.</string>
    <string name="project">Project</string>
    <string name="github">Source code</string>
    <string name="telegram">Telegram update channel</string>
    <string name="oss_licenses">Open source licenses</string>
    <string name="app_version">Version</string>
    <string name="version_x">Version (%s)</string>
    <string name="logcat">Export debug information</string>
    <string name="menu_configuration">Configuration</string>
    <string name="menu_group">Group</string>
    <string name="menu_about">About</string>
    <string name="theme">Theme Color</string>
    <string name="document">Document</string>
    <string name="group_default">Ungrouped</string>
    <string name="quick_toggle">Toggle</string>
    <string name="tile_title">Switcher</string>
    <string name="menu_traffic">Traffic</string>
    <string name="menu_dashboard">sing-box Dashboard</string>
    <string name="action_copy">Copy</string>
    <string name="action_open">Open</string>
    <string name="group_name">Group name</string>
    <string name="group_update" formatted="false">Update</string>
    <string name="group_subscription_link">Subscription Link</string>
    <string name="group_name_required">Group name required</string>
    <string name="group_create">Create group</string>
    <string name="group_create_subscription">Create subscription</string>
    <string name="update_all_subscription">Update all subscriptions</string>
    <string name="group_edit">Edit group</string>
    <string name="group_edit_subscription">Edit subscription</string>
    <string name="group_status_empty">Empty group</string>
    <string name="group_status_empty_subscription">Not updated yet</string>
    <string name="group_status_proxies">%d Proxies</string>
    <string name="group_status_proxies_subscription" formatted="false">%d Proxies | Updated on %s</string>
    <string name="group_no_difference">%s: No difference</string>
    <string name="group_updated" formatted="false">%s: Updated %d proxies</string>
    <string name="group_show_diff">Diff</string>
    <string name="group_diff">Diff (%s)</string>
    <string name="group_delete_confirm_prompt">Are you sure you want to remove this group?</string>
    <string name="group_added">Added: \n%s</string>
    <string name="group_changed">Updated: \n%s</string>
    <string name="group_deleted">Deleted: \n%s</string>
    <string name="group_duplicate">Duplicate: \n%s</string>
    <string name="service_mode">Service Mode</string>
    <string name="service_mode_proxy">Proxy only</string>
    <string name="service_mode_vpn" translatable="false">VPN</string>
    <string name="port_proxy">Proxy Port</string>
    <string name="port_http">HTTP Proxy Port</string>
    <string name="port_transproxy">Transproxy Port</string>
    <string name="cag_route">Route Settings</string>
    <string name="allow_access">Allow Connections from the LAN</string>
    <string name="allow_access_sum">Bind inbound servers to 0.0.0.0</string>
    <string name="inbound_settings">Inbound Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="require_http">Enable HTTP inbound</string>
    <string name="cag_ws">WebSocket Settings</string>
    <string name="ws_max_early_data" translatable="false">Max early data</string>
    <string name="ws_browser_forwarding">Browser Forwarding</string>
    <string name="ws_browser_forwarding_sum">Forward corresponding WebSockets through the browser.</string>
    <string name="speed_interval">Speed Notification Update Interval</string>
    <string name="cag_misc">Misc Settings</string>
    <string name="show_stop">Show Stop Button</string>
    <string name="show_stop_sum">If you don’t want to use Quick Tile as the switch</string>
    <string name="show_direct_speed">Show Direct Speed</string>
    <string name="show_direct_speed_sum">Show the traffic speed without proxy in the notification as
        well</string>
    <string name="security_settings">TLS Security Settings</string>
    <string name="allow_insecure">Allow Insecure</string>
    <string name="allow_insecure_sum">Disable certificate checking. When enabled, this configuration
        is as secure as plaintext</string>
    <string name="traffic" translatable="false">%1$s↑ %2$s↓</string>
    <string name="speed_detail">Proxy： %1$s↑ %2$s↓\nDirect： %3$s↑ %4$s↓</string>
    <string name="speed">%s/s</string>
    <string name="connection_test_testing">Testing…</string>
    <string name="connection_test_available">Success: HTTPS handshake took %dms</string>
    <string name="connection_test_available_http">Success: HTTP handshake took %dms</string>
    <string name="connection_test_error">Failed: %s</string>
    <string name="connection_test_fail">Internet Unavailable</string>
    <string name="connection_test_error_status_code">Error code: #%d</string>
    <string name="cag_dns">DNS Settings</string>
    <string name="remote_dns">Remote DNS</string>
    <string name="direct_dns">Direct DNS</string>
    <string name="enable_dns_routing">Enable DNS Routing</string>
    <string name="dns_routing_message">Resolve domains in bypass routes with Direct DNS. Be aware of
        potential DNS leaks</string>
    <string name="enable_fakedns">Enable FakeIP</string>
    <string name="fakedns_message">May cause other applications need to be restarted to reconnect to
        the network after proxy stopped</string>
    <string name="dns_hosts">Domain rewrite</string>
    <string name="port_local_dns">Local DNS Port</string>
    <string name="require_transproxy">Enable Transproxy Inbound</string>
    <string name="transproxy_mode">Transproxy Mode</string>
    <string name="connection_test_url">Connection Test URL</string>
    <string name="profile_name">Profile Name</string>
    <string name="server_address">Server</string>
    <string name="server_port">Remote Port</string>
    <string name="username">Username</string>
    <string name="username_opt">Username (Optional)</string>
    <string name="password_opt">Password (Optional)</string>
    <string name="key_opt">Key (Optional)</string>
    <string name="password">Password</string>
    <string name="enc_method">Encrypt Method</string>
    <string name="protocol">Protocol</string>
    <string name="protocol_param">Protocol Param</string>
    <string name="obfs">Obfs</string>
    <string name="obfs_param">Obfs Param</string>
    <string name="uuid">User ID</string>
    <string name="alter_id">Alter ID</string>
    <string name="security">Transport layer encryption</string>
    <string name="network">Network</string>
    <string name="header_type">Header Type</string>
    <string name="ws_host">WebSocket Host</string>
    <string name="ws_path">WebSocket Path</string>
    <string name="http_host">HTTP Host</string>
    <string name="http_path">HTTP Path</string>
    <string name="grpc_service_name">gRPC ServiceName</string>
    <string name="tls">Use TLS</string>
    <string name="sni">Server Name Indication</string>
    <string name="alpn">Application-Layer Protocol Negotiation</string>
    <string name="certificates">Certificates</string>
    <string name="early_data_header_name">Early Data Header Name</string>
    <string name="encryption">Encryption</string>
    <string name="extra_headers">Extra Headers</string>
    <string name="config_type">Config Type</string>
    <string name="edit_config">Edit Config</string>
    <string name="ipv6">IPv6 Route</string>
    <string name="prefer">Prefer</string>
    <string name="only">Only</string>
    <string name="metered">Metered Hint</string>
    <string name="metered_summary">Hint system to treat VPN as metered</string>
    <string name="menu_route">Route</string>
    <string name="route_add">Create Route</string>
    <string name="delete_route_prompt">Are you sure you want to remove this route?</string>
    <string name="route_name">Route Name</string>
    <string name="route_proxy">Proxy</string>
    <string name="route_bypass">Bypass</string>
    <string name="route_block">Block</string>
    <string name="route_profile">Select Profile…</string>
    <string name="empty_route">Empty Route</string>
    <string name="empty_route_notice">Set some rules before saving</string>
    <string name="route_bypass_domain">Domain rule for %s</string>
    <string name="route_play_store">Play store rule for %s</string>
    <string name="route_bypass_ip">IP rule for %s</string>
    <string name="route_reset">Reset</string>
    <string name="route_manage_assets">Manage Route Assets</string>
    <string name="route_assets">Assets</string>
    <string name="route_rules_provider">Rule Assets Provider</string>
    <string name="rules_resource_mode">Rule-set Mode</string>
    <string name="rules_legacy_db_mode">Legacy DB compatibility</string>
    <string name="rules_remote_mode">Remote rule-set</string>
    <string name="rules_geosite_remote_url">Geosite remote URL template</string>
    <string name="rules_geoip_remote_url">GeoIP remote URL template</string>
    <string name="rules_remote_download_mode">Remote rule-set download</string>
    <string name="rules_remote_download_direct">Direct</string>
    <string name="rules_remote_download_current">Current selected profile</string>
    <string name="rules_remote_download_specific">Specific profile</string>
    <string name="rules_remote_download_profile_unavailable">The selected remote rule-set download profile is unavailable</string>
    <string name="rules_remote_download_mode_invalid">Invalid remote rule-set download mode: %s</string>
    <string name="rules_remote_url_invalid">Invalid remote rule-set URL for %s</string>
    <string name="rules_reference_invalid">Invalid rule-set reference: %s</string>
    <string name="rules_local_asset_missing">Update the %s route asset before starting the service</string>
    <string name="rules_generated_count">Generated rule-sets: %d</string>
    <string name="route_asset_open_failed">Unable to open %s</string>
    <string name="route_asset_replace_failed">Unable to replace %s</string>
    <string name="route_rules_official">Official</string>
    <string name="route_asset_status">Local version: %s</string>
    <string name="route_asset_no_update">No update</string>
    <string name="route_asset_updated">Updated</string>
    <string name="route_not_asset">Not an asset file: excepted .db, but %s</string>
    <string name="route_opt_bypass_lan">Bypass LAN</string>
    <string name="route_opt_block_ads">Block ADs</string>
    <string name="route_opt_block_analysis">Block analysis</string>
    <string name="proxy_cat">Server Settings</string>
    <string name="ssh_private_key">Private Key</string>
    <string name="wireguard_local_address">Local Address</string>
    <string name="wireguard_public_key">Peer Public Key</string>
    <string name="wireguard_psk">Peer Pre-Shared Key</string>
    <string name="wireguard_peer">Peer</string>
    <string name="wireguard_allowed_ips">Allowed IPs</string>
    <string name="wireguard_persistent_keepalive">Persistent Keepalive (seconds)</string>
    <string name="wireguard_reserved">Reserved</string>
    <string name="wireguard_additional_peers">Additional Peers</string>
    <string name="wireguard_additional_peers_summary">WireGuard [Peer] sections; one section per peer</string>
    <string name="wireguard_endpoint_options">Endpoint Options</string>
    <string name="wireguard_listen_port">Listen Port</string>
    <string name="wireguard_dns_server">WireGuard DNS Server</string>
    <string name="wireguard_dns_server_summary">One DNS URI routed through this WireGuard endpoint, for example udp://8.8.8.8</string>
    <string name="mtu" translatable="false">MTU</string>
</resources>