<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <moe.matsuri.nb4a.ui.CustomBannerEditTextPreference
        android:layout="@layout/uwu_banner_profile"
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="name"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />
    
    <PreferenceCategory
        app:title="@string/proxy_cat">
        <EditTextPreference
            android:layout="@layout/uwu_top"
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_baseline_domain_24"
            app:key="localAddress"
            app:title="@string/wireguard_local_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_baseline_vpn_key_24"
            app:key="privateKey"
            app:title="@string/ssh_private_key"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/wireguard_peer">
        <EditTextPreference
            android:layout="@layout/uwu_top"
            app:icon="@drawable/ic_action_copyright"
            app:key="peerPublicKey"
            app:title="@string/wireguard_public_key"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:dialogLayout="@layout/layout_password_dialog"
            app:icon="@drawable/ic_settings_password"
            app:key="peerPreSharedKey"
            app:title="@string/wireguard_psk" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:icon="@drawable/baseline_public_24"
            app:key="peerAllowedIPs"
            app:title="@string/wireguard_allowed_ips"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:defaultValue="0"
            app:icon="@drawable/ic_baseline_timelapse_24"
            app:key="peerPersistentKeepaliveInterval"
            app:title="@string/wireguard_persistent_keepalive"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:icon="@drawable/ic_baseline_fingerprint_24"
            app:key="reserved"
            app:title="@string/wireguard_reserved"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_bot"
            app:icon="@drawable/ic_av_playlist_add"
            app:key="wireGuardAdditionalPeers"
            app:title="@string/wireguard_additional_peers"
            app:summary="@string/wireguard_additional_peers_summary" />
    </PreferenceCategory>
    <PreferenceCategory
        app:title="@string/wireguard_endpoint_options">
        <EditTextPreference
            android:layout="@layout/uwu_top"
            app:defaultValue="1420"
            app:icon="@drawable/baseline_public_24"
            app:key="mtu"
            app:title="@string/mtu"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_mid"
            app:defaultValue="0"
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="listenPort"
            app:title="@string/wireguard_listen_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:layout="@layout/uwu_bot"
            app:icon="@drawable/ic_action_dns"
            app:key="dnsServer"
            app:title="@string/wireguard_dns_server"
            app:summary="@string/wireguard_dns_server_summary" />
    </PreferenceCategory>
</PreferenceScreen>
